# monomer-chess

./: .gitignore  LICENSE  README.md  cabal.project  chess.cabal  flake.nix  hie.yaml
app/: Main.hs  Player.hs
app/Chess/: Board.hs  Castling.hs  Check.hs  EnPassant.hs  End.hs  Model.hs  Move.hs  Piece.hs  Promotion.hs
app/Chess/Board/: Init.hs  Util.hs
