cabal-version:      3.4
name:               chess
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             fanshi
maintainer:         jackychany321@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common dev
    ghc-options: -Werror

executable chess
    import:           warnings
    main-is:          Main.hs
    other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.18.0.0,
        monomer ^>=1.5.1.0,
        -- lens ^>=5.2.2,
        -- text ^>=2.0.2,
        -- random ^>=1.2.1.1,
        -- splitmix,
        -- time,
        -- data-default,
        -- recursion-schemes,
        -- free
        
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: LambdaCase OverloadedStrings TemplateHaskell
